force-app/main/default/objects/QB_Integration_Log__c/QB_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>QB Integration Log</label>
    <nameField>
        <displayFormat>QB_Log_{000000}</displayFormat>
        <label>QB Integration Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Integration Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>