force-app/main/default/objects/QB_Integration_Log__c/fields/QB_Consumed_Api__c.field-meta.xml
<CustomField>
    <fullName>QB_Consumed_Api__c</fullName>
    <label>Consumed API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>