force-app/main/default/objects/QB_Integration_Log__c/fields/QB_Related_Records__c.field-meta.xml
<CustomField>
    <fullName>QB_Related_Records__c</fullName>
    <label>Related Records</label>
    <length>16</length>
    <type>Text</type>
</CustomField>