force-app/main/default/objects/QB_Integration_Log__c/fields/QB_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>QB_Request_URL__c</fullName>
    <label>Request URL</label>
    <type>Url</type>
</CustomField>