force-app/main/default/objects/QB_Integration_Log__c/fields/QB_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>QB_Response_Body__c</fullName>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>