force-app/main/default/objects/QB_Integration_Log__c/fields/QB_Result__c.field-meta.xml
<CustomField>
    <fullName>QB_Result__c</fullName>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>