force-app/main/default/objects/QB_Integration_Log__c/fields/QB_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>QB_Status_Code__c</fullName>
    <label>Status Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>