force-app/main/default/objects/QB_Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>QB_Request_URL__c</columns>
    <columns>QB_Status_Code__c</columns>
    <columns>QB_Consumed_Api__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>